--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
   font-family: 'Roboto', sans-serif;
   background: url("https://i.pinimg.com/originals/08/44/6f/08446fd6ef6e85db5e4600ed0420f449.png") no-repeat center center fixed;
   background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
 }
 
 form {
@@ -18,7 +23,9 @@ form {
   text-align: center;
 }
 
-input {
+input[type="number"],
+input[type="button"] {
+  display: inline-block;
   padding: 8px; 
   margin: 5px; 
   border: 2px solid black;
@@ -35,20 +42,19 @@ main {
   color: white;
   border: 1px solid rgb(0, 0, 0);
   background-color: rgb(16, 140, 149);
-  max-width: 600px;
-  margin: auto;
   padding: 20px;
 }
 
-#botao {
-  padding: 8px 16px;
-  background-color: #4CAF50;
-  color: white;
+input[type="button"] {
+  margin-left: 10px;
+  padding: 10px 20px;
+  background-color: #00FF00;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-#botao:hover {
-  background-color: #45a049;
+input[type="button"]:hover {
+  background-color: #00CC00;
 }
